AC_INIT
AC_PREREQ(2.59)
AC_CONFIG_SRCDIR([mixi.el])
AM_INIT_AUTOMAKE(mixi-el, 1.0.0)

AC_CHECK_EMACS
AC_PATH_LISPDIR
AC_PATH_PACKAGEDIR

AC_CHECK_SHIMBUN
AC_CHECK_GNUS
AC_CHECK_WL
AC_CHECK_RIECE

AM_CONDITIONAL(HAVE_SHIMBUN, test "${HAVE_SHIMBUN}" = yes)
AM_CONDITIONAL(HAVE_GNUS, test "${HAVE_GNUS}" = yes)
AM_CONDITIONAL(HAVE_WL, test "${HAVE_WL}" = yes)
AM_CONDITIONAL(HAVE_RIECE, test "${HAVE_RIECE}" = yes)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
